# asset_processing_web_app

./: .gitignore  file_tree.txt
,codex/: config.toml
asset_processing_service/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
asset_processing_service/file_structure/: generate_file_structure _rev_3_1.py  generate_file_structure_rev_3_1.py
asset_processing_service/src/asset_processing_service/: api_client.py  job_processor.py  life_goals_agent.py  main.py  media_processor.py  models.py  setup_config.py
asset_processing_service/src/asset_processing_service/my_utils/: configuration.py  env_loader.py  llm_loader.py  logger_setup.py  postgres_store_loader.py  redis_saver_loader.py  token_usage.py  token_usage_tier.json
asset_processing_service/tests/: README.md  conftest.py  test_smoke_cli.py  test_unit_parse_tests.py
nextjs/: .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json
nextjs/drizzle/: 0000_yielding_edwin_jarvis.sql  schema.ts
nextjs/drizzle/meta/: 0000_snapshot.json  _journal.json
nextjs/src/: proxy.ts
nextjs/src/app/: globals.css  layout.tsx  page.tsx
nextjs/src/app/(dashboard)/: layout.tsx
nextjs/src/app/(landing)/: page.tsx
nextjs/src/components/: ConfirmationModal.tsx  ProjectList.tsx  Sidebar.tsx  SidebarNav.tsx  SidebarToggle.tsx  UserProfileSection.tsx
nextjs/src/components/job-detail/: JobDetailBody.tsx  JobDetailHeader.tsx  JobDetailStepper.tsx  JobDetailView.tsx
nextjs/src/server/: mutation.ts  queries.ts
nextjs/src/utils/: timeUtils.ts
(+18 files in other folders)
