[project]
name = "asset-processing-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Devilfish281",email = "Dobley@csu.fullerton.edu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "aiohttp (>=3.13.3,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "openai (>=2.21.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "langgraph (>=1.0.9,<2.0.0)",
    "langchain-openai (>=1.1.10,<2.0.0)",
    "langchain-tavily (>=0.2.17,<0.3.0)",
    "langchain-core (>=1.2.14,<2.0.0)",
    "langsmith (>=0.7.6,<0.8.0)",
    "langgraph-checkpoint-redis (>=0.3.5,<0.4.0)",
    "trustcall (>=0.0.39,<0.0.40)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "langgraph-checkpoint-postgres (>=3.0.4,<4.0.0)",
    "tavily (>=1.1.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]


[tool.poetry]
packages = [{include = "asset_processing_service", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
asset-processing-service = "asset_processing_service.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
markers = [
  "smoke: smoke tests (CLI/integration-style)"
]
